--- a/.github/workflows/bodleian-plan.yml
+++ b/.github/workflows/bodleian-plan.yml
@@ -1,113 +1,115 @@
-# name: Bodleian Plan
+name: Bodleian Plan
 
-# on:
-#   push:
-#     branches: ["main"]
-#     tags-ignore: ["**"]
-#     paths:
-#     - 'projects/bodleian/**'
-#   workflow_dispatch:
+on:
+  push:
+    branches: ["main"]
+    tags-ignore: ["**"]
+    paths:
+    - 'projects/bodleian/**'
+  workflow_dispatch:
 
-# env:
-#   # TF_VAR_billing_account_id: ${{ secrets.BILLING_ACCOUNT_ID }}
-#   # TF_VAR_seed_sa_email: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-#   TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-#   TF_VAR_github_api_label_token: ${{ secrets.GH_TOKEN_FOR_LABELING }}
-#   TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
-#   TF_VAR_workload_identity_provider_name: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#   TF_VAR_workload_identity_pool_id: ${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}
-#   TF_VAR_codacy_api_token: ${{ secrets.CODACY_API_TOKEN }}
-#   TF_VAR_docker_registry_username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
-#   TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
-#   TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
-#   TF_IN_AUTOMATION: true
-#   TF_INPUT: false
-#   GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
-#   CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
+defaults:
+  run:
+    working-directory: projects/bodleian
 
-# permissions:
-#   id-token: write
+env:
+  TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  TF_VAR_github_api_label_token: ${{ secrets.GH_TOKEN_FOR_LABELING }}
+  TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
+  TF_VAR_workload_identity_provider_name: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+  TF_VAR_workload_identity_pool_id: ${{ secrets.WORKLOAD_IDENTITY_POOL_ID }}
+  TF_VAR_codacy_api_token: ${{ secrets.CODACY_API_TOKEN }}
+  TF_VAR_docker_registry_username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+  TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+  TF_VAR_docker_registry_token: ${{ secrets.DOCKER_REGISTRY_TOKEN }}
+  TF_IN_AUTOMATION: true
+  TF_INPUT: false
+  GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
 
-# jobs:
-#   compliance-scan:
-#     runs-on: ubuntu-20.04
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#       - name: Run Checkov action
-#         id: checkov
-#         uses: bridgecrewio/checkov-action@v12.1397.0
-#         with:
-#           framework: terraform
-#           # we are fine with Google's Keys
-#           skip_check: CKV_GCP_84,CKV_GIT_4
-#           output_format: cli
-#           download_external_modules: true
+permissions:
+  id-token: write
 
-#   security-scan:
-#     runs-on: ubuntu-20.04
+jobs:
+  compliance-scan:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Run Checkov action
+        id: checkov
+        uses: bridgecrewio/checkov-action@v12.1397.0
+        with:
+          framework: terraform
+          # we are fine with Google's Keys
+          skip_check: CKV_GCP_84,CKV_GIT_4
+          output_format: cli
+          download_external_modules: true
 
-#     steps:
-#       - uses: actions/checkout@v3
-#       - run: docker run -v ${PWD}:/src aquasec/tfsec:v1.8 /src
+  security-scan:
+    runs-on: ubuntu-20.04
 
-#   lint:
-#     runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v3
+      - run: docker run -v ${PWD}:/src aquasec/tfsec:v1.8 /src
 
-#     steps:
-#       - uses: actions/checkout@v3
-#       - uses: terraform-linters/setup-tflint@v1
-#         name: Setting up TFLint
-#         with:
-#           tflint_version: v0.29.0
-#       - name: Initializing TFLint
-#         run: tflint --init
-#       - name: Linting
-#         run: tflint -f compact --disable-rule=terraform_module_pinned_source
+  lint:
+    runs-on: ubuntu-20.04
 
-#   qa:
-#     runs-on: ubuntu-20.04
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#       - name: Authenticating
-#         uses: google-github-actions/auth@v0.6.0
-#         with:
-#           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#           service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-#       - name: Setting up GCP environment
-#         uses: google-github-actions/setup-gcloud@v0.6.0
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v1.3.2
-#       - name: Terraform Init
-#         run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
-#       - name: Terraform Format
-#         run: terraform fmt -check -recursive
-#       - name: Terraform Validate
-#         run: terraform validate -no-color
+    steps:
+      - uses: actions/checkout@v3
+      - uses: terraform-linters/setup-tflint@v1
+        name: Setting up TFLint
+        with:
+          tflint_version: v0.29.0
+      - name: Initializing TFLint
+        run: tflint --init
+      - name: Linting
+        run: tflint -f compact --disable-rule=terraform_module_pinned_source
 
-#   plan:
-#     runs-on: ubuntu-20.04
+  qa:
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.6.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1.3.2
+      - name: Terraform Init
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+      - name: Terraform Format
+        run: terraform fmt -check -recursive
+      - name: Terraform Validate
+        run: terraform validate -no-color
 
-#     needs:
-#       - qa
-#       - lint
-#       - security-scan
-#       - compliance-scan
+  plan:
+    runs-on: ubuntu-20.04
 
-#     steps:
-#       - name: Checkout
-#         uses: actions/checkout@v3
-#       - name: Authenticating
-#         uses: google-github-actions/auth@v0.6.0
-#         with:
-#           workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
-#           service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-#       - name: Setting up GCP environment
-#         uses: google-github-actions/setup-gcloud@v0.6.0
-#       - name: Setup Terraform
-#         uses: hashicorp/setup-terraform@v1.3.2
-#       - name: Init
-#         run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
-#       - name: Plan
-#         run: terraform plan -no-color
+    needs:
+      - qa
+      - lint
+      - security-scan
+      - compliance-scan
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Authenticating
+        uses: google-github-actions/auth@v0.6.0
+        with:
+          workload_identity_provider: ${{ secrets.WORKLOAD_IDENTITY_PROVIDER }}
+          service_account: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
+      - name: Setting up GCP environment
+        uses: google-github-actions/setup-gcloud@v0.6.0
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1.3.2
+      - name: Init
+        run: terraform init -backend-config="bucket=${{ secrets.TERRAFORM_STATE_BUCKET }}"
+      - name: Plan
+        run: terraform plan -no-color
