--- a/.github/workflows/bootstrap.yml
+++ b/.github/workflows/bootstrap.yml
@@ -15,12 +15,12 @@ env:
   TF_LOG: ${{ secrets.TF_LOG}}
   TF_VAR_billing_account_id: ${{ secrets.BILLING_ACCOUNT_ID }}
   TF_VAR_seed_sa_email: ${{ secrets.SEED_SA_EMAIL_ADDRESS }}
-  TF_VAR_github_admin_token: ${{ secrets.GITHUB_ADMIN_TOKEN }}
+  TF_VAR_github_admin_token: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   TF_VAR_project_postfix: ${{ secrets.GCP_PROJECT_POSTFIX }}
   TF_IN_AUTOMATION: true
   TF_INPUT: false
-  GITHUB_TOKEN: ${{ secrets.GITHUB_ADMIN_TOKEN }}
-  GH_TOKEN: ${{ secrets.GITHUB_ADMIN_TOKEN }}
+  GITHUB_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
+  GH_TOKEN: ${{ secrets.ADMIN_GITHUB_TOKEN }}
   CLOUDSDK_CORE_PROJECT: ${{ secrets.GCP_PROJECT_ID }}
 
 permissions:
